samples/_failures_safe/1761174248_8725f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5307cf4f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_5307cf4f.c:185:40: error: expected ‘)’ at end of input
  185 |             printf("Vertex %d: %d\n", i
      |                   ~                    ^
      |                                        )
./samples/SAFE/__tmp_5307cf4f.c:185:13: error: expected declaration or statement at end of input
  185 |             printf("Vertex %d: %d\n", i
      |             ^~~~~~
./samples/SAFE/__tmp_5307cf4f.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5307cf4f.c:185:13: error: expected declaration or statement at end of input
